# poetrypathtest

./: pyproject.toml
test1/: pyproject.toml
test2/: pyproject.toml
test3-2/test3/: pyproject.toml
